2010-06-21  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.Ide.Commands/CustomStringTagProvider.cs: Add
	  string tag for the config directory. Implements 615677 -
	  Make the config folder variable available in custom
	  commands.

2010-06-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: Only update
	  changed lines.

2010-06-21  Mike Krüger  <mkrueger@novell.com>

	* MonoDevelop.Ide.Gui/ViewCommandHandlers.cs: Fixed 'Bug
	  615831 - Texteditor is not invalidated after remove trailing
	  wihte spaces action'.

2010-06-16  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Components.Commands/KeyBindingManager.cs: Move
	  the consumed shift modifier restoration to a more
	  appropriate place. Add a better comment.

2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide/RootWorkspace.cs: Disabled
	  OnRunProjectChecks timeout because it churns disk, wastes
	  power on laptop.

2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.CodeCompletion/ListWidget.cs:
	* MonoDevelop.Ide.CodeCompletion/ListWindow.cs: when there are
	  no matches, display a message to indicate that the
	  completion list is still handling input

2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.addin.xml: Set icon for the default code
	  formatting policies panel group to match the per-item one.

	* MonoDevelop.Ide.Desktop/PlatformService.cs: Handle icon for
	  text/plain mimetype.

2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Desktop/PlatformService.cs: Add a
	  description for the text/plain mimetype.

2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.addin.xml: Remove nonexistent icon.

2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.Ide.Projects.OptionPanels/CodeFormattingPanel.cs:
	  Only show mimetypes with policies.

2010-06-15  Michael Hutchinson  <mhutchinson@novell.com>
